navbar z-index problem solved

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,9 +2,11 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
+  overflow-x: hidden;
   background-color: #f8f9fa;
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
